# NotesCore

./: AuthLayer.cpp  CMakeLists.txt  LICENSE  README.md
include/: AuthLayer.hpp  IAuthLayerDelegate.hpp  INoteSource.h  INotesSourceDelegate.h  NoteEntity-odb.hxx  NoteEntity-odb.ixx  NoteEntity.hpp  NotesSource.h  NotesSourceImpl.h  configuration.hpp
src/: AuthLayer.cpp  NoteEntity-odb.cxx  NoteEntity.cpp  NotesSource.cpp  NotesSourceImpl.cpp
test/: AuthTests.cpp  NoteEntityTests.cpp  NotesFasadeTests.cpp  NotesImplTests.cpp  main.cpp
